src/components/atoms/ImgSideText/ImgSideText.scss
.imgSideText-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;

    width: 100%;
    
    .imgSideText-img {
        max-width: 48%;

        margin-bottom: 30px;
        margin-left: 10px;
    }

    .imgSideText-p {
        max-width: 48%;
        height: fit-content;

        text-align: justify;
    }

    .left-element {
        order: 1;
    }

    .right-element {
        order: 2;
    }
}

